tooling/tree-sitter-w/grammar.js
    source_file: ($) =>
      choice(
        seq(
          optional($.module_header),
          repeat(
            choice(
              $.service_import_statement,
              $.domain_import_statement,
              $.kernel_import_statement,
              $.import_statement,
              $.reexport_declaration,
            ),
          ),
          repeat($._declaration),
        ),
        $.build_manifest,
      ),

    _declaration: ($) =>
      choice(
        $.export_list_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.object_declaration,
        $.service_declaration,
        $.enum_declaration,
        $.protocol_declaration,
        $.type_declaration,
        $.alias_declaration,
        $.dimension_declaration,
        $.unit_declaration,
        $.extension_declaration,
        $.behavior_declaration,
        $.entry_declaration,
        $.foreign_declaration,
        $.const_declaration,
        $.test_declaration,
      ),

    declaration_prefix: (_) => "export",

    _function_header: ($) =>
      seq($._function_prefix, optional($.abi_contract), $._function_tail),
    _foreign_function_header: ($) =>
      seq($._function_prefix, $.language_tag, $._function_tail),
    function_declaration: ($) =>
      choice(
        seq($._function_header, field("body", $.block)),
        seq($._foreign_function_header, field("body", $.foreign_body)),
      ),
    abi_contract: ($) =>
      seq(
        token.immediate("<"),
        "abi",
        ":",
        field("abi", $.contextual_member_expression),
        optional(","),
        ">",
      ),

    parameter_list: ($) => seq("(", commaSep($.parameter), optional(","), ")"),
    borrow_clause: ($) =>
      seq(
        "borrows",
        "(",
        commaSep1($.borrow_pair),
        optional(","),
        ")",
      ),
    borrow_pair: ($) =>
      seq(
        field("result", $.slot_ref),
        ":",
        "[",
        commaSep1(field("source", $.slot_ref)),
        optional(","),
        "]",
      ),
    slot_ref: ($) => choice($.identifier, $.number_literal),
    parameter: ($) =>
      choice(
        seq(
          "allocator",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("name", alias("allocator", $.identifier)),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          "_",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("label", $.identifier),
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
      ),
    parameter_call_ownership: ($) => choice("inout", "take", "const"),
    parameter_type: ($) =>
      prec.right(
        seq(
          optional(
            field(
              "qualifier",
              choice(
                "any",
                "some",
                "shared",
                "weak",
                "ref",
                "view",
                seq("ref", "any"),
                seq("ref", "some"),
                seq("mut", "ref"),
                seq("mut", "view"),
              ),
            ),
          ),
          $._type_core,
          repeat(seq("&", field("composition", $._type_core))),
          optional("?"),
        ),
      ),
    struct_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "struct",
        field("name", $._type_identifier),
        optional($.generic_parameters),
        optional($.conformance_clause),
        $.type_body,
      ),
    protocol_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "protocol",
        field("name", $._type_identifier),
        optional($.primary_associated_types),
        optional($.conformance_clause),
        $.protocol_body,
      ),
    type_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.field_declaration,
            $.computed_property_declaration,
            $.initializer_declaration,
            $.function_declaration,
            $.const_declaration,
            $.alias_declaration,
            $.deinit_declaration,
          ),
        ),
        "}",
      ),
    protocol_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.function_declaration,
            alias($.function_signature, $.function_declaration),
            $.property_requirement,
            $.associated_type_requirement,
            $.associated_const_requirement,
          ),
        ),
        "}",
      ),
    initializer_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        optional("const"),
        optional("unsafe"),
        "init",
        field("parameters", $.parameter_list),
        optional(seq("throws", field("error_type", $.type))),
        field("body", $.block),
      ),

    field_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        field("binding", choice("let", "var")),
        choice(
          seq(
            field("storage_modifier", choice("atomic", $.identifier)),
            field("name", $.identifier),
          ),
          field("name", $.identifier),
        ),
        choice(
          seq(
            ":",
            field("type", $.property_type),
            optional(seq("=", field("value", $._expression))),
          ),
          seq("=", field("value", $._expression)),
        ),
        optional(";"),
      ),

    type_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "type",
        field("name", $._type_identifier),
        optional($.generic_parameters),
        "=",
        field("value", $.type),
        optional(";"),
      ),

    foreign_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "foreign",
        field("language", $.identifier),
        optional(seq("from", field("source", $.string_literal))),
        "{",
        repeat(
          choice(
            $.foreign_type_declaration,
            $.foreign_struct_declaration,
            $.const_declaration,
            alias($.function_signature, $.function_declaration),
          ),
        ),
        "}",
      ),
    foreign_struct_declaration: ($) =>
      seq(
        "struct",
        field("name", $._type_identifier),
        "{",
        repeat($.foreign_field_declaration),
        "}",
      ),
    foreign_field_declaration: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(";"),
      ),

    const_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "const",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", $._expression),
        optional(";"),
      ),

    type: ($) =>
      prec.right(
        seq(
          optional(
            field(
              "qualifier",
              choice(
                "any",
                "some",
                "shared",
                "weak",
                "ref",
                "const",
                "view",
                seq("ref", "any"),
                seq("ref", "some"),
                seq("mut", "ref"),
                seq("mut", "view"),
              ),
            ),
          ),
          $._type_core,
          repeat(seq("&", field("composition", $._type_core))),
          optional("?"),
        ),
      ),
    property_type: ($) =>
      choice(
        $.type,
        prec.right(seq("inout", $.non_borrowed_type)),
      ),
    _type_core: ($) =>
      choice(
        seq(
          field("base", $.type_name),
          repeat($.type_arguments),
        ),
        field("base", $.tuple_type),
        field("base", $.fixed_array_type),
        field("base", $.function_type),
      ),
    type_name: ($) =>
      prec.right(seq(field("name", $._type_identifier), repeat(seq(".", field("member", $._type_identifier))))),
    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    type_arguments: ($) =>
      seq(token.immediate("<"), commaSep1($.type_argument), optional(","), ">"),
    type_argument: ($) =>
      choice(
        $.contract_expression_argument,
        $.static_record_literal,
        $.static_array_literal,
        $.type,
        $.number_literal,
        $.boolean_literal,
        $.string_literal,
        $.quantity_literal,
        $.size_literal,
        $.contextual_member_expression,
        seq(
          field("label", $.identifier),
          ":",
          field("value", $.static_argument_value),
        ),
      ),
    fixed_array_type: ($) =>
      seq(
        "[",
        field("element", $.type),
        ";",
        field("count", $._expression),
        "]",
      ),
    tuple_type: ($) =>
      choice(
        seq("(", ")"),
        seq(
          "(",
          $.type,
          ",",
          optional(seq(commaSep1($.type), optional(","))),
          ")",
        ),
        seq(
          "(",
          $.labeled_tuple_type_element,
          ",",
          optional(seq(commaSep1($.labeled_tuple_type_element), optional(","))),
          ")",
        ),
      ),
    function_type: ($) =>
      choice(
        prec.right(
          3,
          seq(
            optional("unsafe"),
            field("callable_mode", choice("mut", "take")),
            optional("async"),
            $._function_type_signature,
          ),
        ),
        prec.right(
          2,
          seq(
            optional("unsafe"),
            optional("async"),
            $._function_type_signature,
          ),
        ),
      ),
    _function_type_signature: ($) =>
      prec.right(
        seq(
          "fn",
          optional(field("contract", $.type_arguments)),
          "(",
          commaSep($.function_type_parameter),
          optional(","),
          ")",
          optional(seq(":", field("return_type", $.type))),
          optional(seq("throws", field("error_type", $.type))),
          optional($.borrow_clause),
        ),
      ),
    function_type_parameter: ($) =>
      choice(
        seq(
          "allocator",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
        ),
        seq(
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
        ),
      ),

    block: ($) => seq("{", repeat($._statement), "}"),
    _statement: ($) =>
      choice(
        $.allocator_statement,
        $.binding_declaration,
        $.commit_statement,
        $.return_statement,
        $.throw_statement,
        $.defer_statement,
        $.guard_statement,
        $.if_statement,
        $.labeled_statement,
        $.while_statement,
        $.for_statement,
        $.repeat_statement,
        $.do_statement,
        $.break_statement,
        $.continue_statement,
        $.expression_statement,
        $.yield_statement,
      ),

    binding_declaration: ($) =>
      seq(
        field("kind", choice("let", "var")),
        optional(field("storage_modifier", choice("atomic", $.behavior_identifier))),
        optional(field("pattern_ownership", choice("ref", seq("mut", "ref"), seq("mut", "view")))),
        field("pattern", choice($.pattern, $.inferred_struct_pattern)),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $._expression))),
        optional(";"),
      ),
    return_statement: ($) =>
      prec.right(seq("return", optional($._expression), optional(";"))),
    if_statement: ($) =>
      prec.right(seq("if", choice($.optional_binding, $._expression), $.block, optional(seq("else", choice($.if_statement, $.block))))),
    for_statement: ($) =>
      seq(
        "for",
        optional($._asynchronous_iteration_effects),
        optional(field("ownership", choice("ref", seq("mut", "ref"), seq("mut", "view"), "copy"))),
        field("pattern", choice($.pattern, $.inferred_struct_pattern)),
        "in",
        field("value", $._expression),
        $.block,
      ),
    optional_binding: ($) =>
      seq(
        field("kind", choice("let", "var")),
        optional(field("ownership", choice("ref", seq("mut", "ref"), seq("mut", "view"), "copy"))),
        field("pattern", choice($.pattern, $.inferred_struct_pattern)),
        "=",
        field("value", $._expression),
      ),

    expression_statement: ($) => seq($._expression, optional(";")),

    pattern: ($) =>
      choice(
        $.range_pattern,
        $.identifier,
        $.enum_pattern,
        $.struct_pattern,
        $.tuple_pattern,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.quantity_literal,
        $.size_literal,
        seq("let", $.identifier),
        "_",
      ),
    _expression: ($) =>
      choice(
        $.assignment_expression,
        $.pipe_forward_expression,
        $.task_expression,
        $.bounded_range_expression,
        $.type_query_expression,
        $.conditional_cast_expression,
        $.binary_expression,
        $.unary_expression,
        $.optional_try_expression,
        $.optional_propagation_expression,
        $.panic_expression,
        $.call_expression,
        $.generic_application_expression,
        $.member_expression,
        $.facet_expression,
        $.optional_member_expression,
        $.index_expression,
        $.closure_expression,
        $.capture_expression,
        $.pipeline_expression,
        $.stream_expression,
        $.lock_expression,
        $.unsafe_expression,
        $.if_expression,
        $.switch_expression,
        $.unit_literal,
        $.parenthesized_expression,
        $.tuple_expression,
        $.repeat_array_literal,
        $.array_literal,
        $.map_literal,
        $.contextual_member_expression,
        $.quantity_literal,
        $.unit_suffix_literal,
        $.size_literal,
        $.number_literal,
        $.string_literal,
        $.multiline_string_literal,
        $.raw_string_literal,
        $.byte_literal,
        $.boolean_literal,
        $.identifier,
      ),

    assignment_expression: ($) =>
      prec.right(
        -1,
        seq(field("left", $._expression), field("operator", choice(...ASSIGNMENT_OPERATORS)), field("right", $._expression)),
      ),

    // `|>` accepts either a free-function template or an explicitly relative
    // member template. The semantic checker owns labels, ownership, and
    // modifiers.
    _asynchronous_iteration_effects: (_) => seq(optional("try"), "await"),

    argument_list: ($) => seq("(", commaSep($.argument), optional(","), ")"),
