tooling/tree-sitter-w/test/corpus/callable_labels.txt
==================
Callable label policies are explicit and independent of position
==================

fn reserve(
  order: Order,
  audit: Audit,
  _ note: String,
  to destination: Table,
) {}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (parameter_type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (parameter_type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (parameter_type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (identifier)
        (parameter_type
          (type_name
            (type_identifier)))))
    (block)))

==================
Parameter contracts follow the binding
==================

fn transfer(source: ref Menu, target: inout Menu, payload: take Order) {}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (parameter_type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (parameter_call_ownership)
        (parameter_type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (parameter_call_ownership)
        (parameter_type
          (type_name
            (type_identifier)))))
    (block)))

==================
Leading ownership remains structural input for semantic rejection
==================

fn consume(take value: Menu) {}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (identifier)
        (parameter_type
          (type_name
            (type_identifier)))))
    (block)))

==================
Named remains an identifier without a following parameter name
==================

fn inspect(named: Bool) {}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (parameter_type
          (type_name
            (type_identifier)))))
    (block)))
